--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -29,7 +29,7 @@ permalink: /collections/
             </div>
             <div class="collection--cta">
               <a class="gym-button gym-button-secondary" href="{{ hub_page.url }}">
-                <b>Explore</b>
+                <b>Learn More</b>
               </a>
             </div>
           </div>
