--- a/courses/index.html
+++ b/courses/index.html
@@ -28,7 +28,7 @@ permalink: /courses/
     </div>
   </div>
 
-  <main id="main" class="container" aria-label="Content" tabindex="-1">  
+  <main id="main" class="container" aria-label="Content" tabindex="-1">
     <div class="catalog-content row">
       <div class="col-md-9 course-overview">
         <section class="courses-container">
@@ -64,12 +64,8 @@ permalink: /courses/
       </div>
       <div class="col-md-3 sidebar">
         {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
-        {%- include featured.html -%}
+        {%- include sidebar-featured.html -%}
       </div>
-    </div> 
+    </div>
   </main>
 </section>
-
-
-
-
