Update page content
- Update hero text
- Update links

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -11,7 +11,7 @@ permalink: /social-impact/
 
   <h1>Social Impact</h1>
 
-  <p class="hero-text">In addition to lifelong learning, we at Gymnasium care about using our platform to support marginalized communities. From closing the gender gap in tech to creating job opportunities, we believe that diversity is a feature, not a bug. Here’s a collection of causes we care about that we’d love for you to consider supporting — whether that looks like a follow on social media to increase their exposure or a financial donation.</p>
+  <p class="hero-text">We at Gymnasium believe that diversity is a feature, not a bug. Please join us in supporting causes we care about — from working toward closing the gender gap in tech to connecting marginalized communities with job opportunities. Together we can make a difference.</p>
 
   <article id="support-now">
   <h2>Support Now</h2>
@@ -22,30 +22,51 @@ permalink: /social-impact/
 
   <h2>Causes We Care About</h2>
 
-  <h3>Timely Causes</h3>
+  <h3>Aquent Social Impact</h3>
   <ul>
-    <li><a href="https://www.raicestexas.org">RAICES: The Refugee and Immigrant Center for Education and Legal Services</a></li>
-  </ul>
-
-  <h3>Designing for Good</h3>
-  <ul>
-    <li><a href="https://designingforgood.com">Designing For Good</a></li>
+    <li><a href="https://designingforgood.com">Designing for Good</a></li>
+    <li><a href="https://aquent.com/diversity-plus">Diversity+ Recruiting Solution</a></li>
+    <li><a href="https://aquent.com/about-us/sustainability">Global Sustainability Efforts</a></li>
   </ul>
 
   <h3>Educational Nonprofits</h3>
   <ul>
-    <li><a href="http://www.writeboston.org/tip/">Teens in Print journalism program</a></li>
+    <li><a href="https://www.writeboston.org/tip/">Teens in Print</a></li>
+    <li><a href="https://826national.org">826 National</a></li>
+    <li><a href="https://www.possefoundation.org">The Posse Foundation</a></li>
+    <li><a href="https://thelastmile.org">The Last Mile</a></li>
   </ul>
 
   <h3>Creative Nonprofits</h3>
   <ul>
-    <li><a href="http://afhboston.org">Artists for Humanity</a></li>
+    <li><a href="https://afhboston.org">Artists for Humanity</a></li>
+    <li><a href="https://youngarts.org">YoungArts</a></li>
   </ul>
 
-  <h3>Tech Nonprofits</h3>
+  <h3>Diversity in Tech</h3>
+  <ul>
+    <li><a href="https://www.resilientcoders.org">Resilient Coders</a></li>
+    <li><a href="https://blacktechpipeline.com">Black Tech Pipeline</a></li>
+  </ul>
+
+  <h3>Women in Tech</h3>
   <ul>
     <li><a href="https://girlswhocode.com">Girls Who Code</a></li>
     <li><a href="https://www.blackgirlscode.com">Black Girls Code</a></li>
+  </ul>
+
+  <h3>LGBTQ+ in Tech</h3>
+  <ul>
+    <li><a href="https://outintech.com">Out in Tech</a></li>
+    <li><a href="https://startout.org">StartOut</a></li>
+    <li><a href="https://lgbtq.technology">LGBTQ in Technology Slack</a></li>
+  </ul>
+
+  <h3>Social Justice</h3>
+  <ul>
+    <li><a href="https://www.raicestexas.org">RAICES</a></li>
+    <li><a href="https://www.naacpldf.org">NAACP Legal Defense Fund</a></li>
+    <li><a href="https://colorofchange.org">Color of Change</a></li>
   </ul>
 
 </div><!-- .main-content-static -->
