Update page content
- Add unique section fragments

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -22,52 +22,66 @@ permalink: /social-impact/
 
   <h2>Causes We Care About</h2>
 
-  <h3>Aquent Social Impact</h3>
-  <ul>
-    <li><a href="https://designingforgood.com">Designing for Good</a></li>
-    <li><a href="https://aquent.com/diversity-plus">Diversity+ Recruiting Solution</a></li>
-    <li><a href="https://aquent.com/about-us/sustainability">Global Sustainability Efforts</a></li>
-  </ul>
+  <section id="aquent-social-impact">
+    <h3>Aquent Social Impact</h3>
+    <ul>
+      <li><a href="https://designingforgood.com">Designing for Good</a></li>
+      <li><a href="https://aquent.com/diversity-plus">Diversity+ Recruiting Solution</a></li>
+      <li><a href="https://aquent.com/about-us/sustainability">Global Sustainability Efforts</a></li>
+    </ul>
+  </section>
 
-  <h3>Educational Nonprofits</h3>
-  <ul>
-    <li><a href="https://www.writeboston.org/tip/">Teens in Print</a></li>
-    <li><a href="https://826national.org">826 National</a></li>
-    <li><a href="https://www.possefoundation.org">The Posse Foundation</a></li>
-    <li><a href="https://thelastmile.org">The Last Mile</a></li>
-  </ul>
+  <section id="educational-nonprofits">
+    <h3>Educational Nonprofits</h3>
+    <ul>
+      <li><a href="https://www.writeboston.org/tip/">Teens in Print</a></li>
+      <li><a href="https://826national.org">826 National</a></li>
+      <li><a href="https://www.possefoundation.org">The Posse Foundation</a></li>
+      <li><a href="https://thelastmile.org">The Last Mile</a></li>
+    </ul>
+  </section>
 
-  <h3>Creative Nonprofits</h3>
-  <ul>
-    <li><a href="https://afhboston.org">Artists for Humanity</a></li>
-    <li><a href="https://youngarts.org">YoungArts</a></li>
-  </ul>
+  <section id="creative-nonprofits">
+    <h3>Creative Nonprofits</h3>
+    <ul>
+      <li><a href="https://afhboston.org">Artists for Humanity</a></li>
+      <li><a href="https://youngarts.org">YoungArts</a></li>
+    </ul>
+  </section>
 
-  <h3>Diversity in Tech</h3>
-  <ul>
-    <li><a href="https://www.resilientcoders.org">Resilient Coders</a></li>
-    <li><a href="https://blacktechpipeline.com">Black Tech Pipeline</a></li>
-  </ul>
+  <section id="diversity-in-tech">
+    <h3>Diversity in Tech</h3>
+    <ul>
+      <li><a href="https://www.resilientcoders.org">Resilient Coders</a></li>
+      <li><a href="https://blacktechpipeline.com">Black Tech Pipeline</a></li>
+    </ul>
+  </section>
 
-  <h3>Women in Tech</h3>
-  <ul>
-    <li><a href="https://girlswhocode.com">Girls Who Code</a></li>
-    <li><a href="https://www.blackgirlscode.com">Black Girls Code</a></li>
-  </ul>
+  <section id="women-in-tech">
+    <h3>Women in Tech</h3>
+    <ul>
+      <li><a href="https://girlswhocode.com">Girls Who Code</a></li>
+      <li><a href="https://www.blackgirlscode.com">Black Girls Code</a></li>
+    </ul>
+  </section>
 
-  <h3>LGBTQ+ in Tech</h3>
-  <ul>
-    <li><a href="https://outintech.com">Out in Tech</a></li>
-    <li><a href="https://startout.org">StartOut</a></li>
-    <li><a href="https://lgbtq.technology">LGBTQ in Technology Slack</a></li>
-  </ul>
+  <section id="lgbtq+-in-tech">
+    <h3>LGBTQ+ in Tech</h3>
+    <ul>
+      <li><a href="https://outintech.com">Out in Tech</a></li>
+      <li><a href="https://startout.org">StartOut</a></li>
+      <li><a href="https://lgbtq.technology">LGBTQ in Technology Slack</a></li>
+    </ul>
+  </section>
 
-  <h3>Social Justice</h3>
-  <ul>
-    <li><a href="https://www.raicestexas.org">RAICES</a></li>
-    <li><a href="https://www.naacpldf.org">NAACP Legal Defense Fund</a></li>
-    <li><a href="https://colorofchange.org">Color of Change</a></li>
-  </ul>
+  <section id="social-justice">
+    <h3>Social Justice</h3>
+    <ul>
+      <li><a href="https://www.raicestexas.org">RAICES</a></li>
+      <li><a href="https://www.naacpldf.org">NAACP Legal Defense Fund</a></li>
+      <li><a href="https://colorofchange.org">Color of Change</a></li>
+    </ul>
+  </section>
 
 </div><!-- .main-content-static -->
 
