Update other static pages styling
- Update Support page layout
- Update FAQ page layout

--- a/static-pages/support/index.html
+++ b/static-pages/support/index.html
@@ -2,12 +2,26 @@
 layout: wrapper-75-25
 permalink: /support/
 ---
+{%- if site.environment == 'local' -%}
+<link rel="stylesheet" href="{{ site.url }}/css/static-main-content.css?{{ site.time | date:'%s' }}">
+{%- endif -%}
 
-<h1>Support</h1>
+<!-- Temporary HTML for style hooks -->
+<div class="main-content-static">
 
-<p>One thing we hear from our Gymnasium students is that our team responds to their questions so quickly it puts the online education competition to shame. We try to have support available during the times you’re taking the courses, but are not available 24/7. Here are some guidelines to getting help with Gymnasium. </p>
-<ul>
-  <li>If your question is related to course material, homework, or your understanding of a concept, check out the forums. There you’ll find other students and teaching assistants eager to share their knowledge.</li>
-  <li>Have a question about something other than the course material? Click on the orange icon located in the lower right-hand corner of our website to leave a message with our support team. (We typically answer within a few hours.)</li>
-  <li>Don’t forget, you can always go “old school” and send an email to <b><a href="{{ 'mailto:help@thegymnasium.com?subject=Get+In+Touch' | encode_email }}">{{ 'help@thegymnasium.com' | encode_email }}</a></b>. Sorry, faxes are a little too old school for us.</li>
-</ul>
+  <h1>Support</h1>
+
+  <p class="hero-text">One thing we hear from our Gymnasium students is that our team responds to their questions so quickly it puts the online education competition to shame. We try to have support available during the times you’re taking the courses, but are not available 24/7. Here are some guidelines to getting help with Gymnasium.</p>
+
+  <section id="guidelines">
+    <h2>Guidelines</h2>
+    <ul>
+      <li>If your question is related to course material, homework, or your understanding of a concept, check out the forums. There you’ll find other students and teaching assistants eager to share their knowledge.</li>
+      <li>Have a question about something other than the course material? Click on the orange icon located in the lower right-hand corner of our website to leave a message with our support team. (We typically answer within a few hours.)</li>
+      <li>Don’t forget, you can always go “old school” and send an email to <b><a href="{{ 'mailto:help@thegymnasium.com?subject=Get+In+Touch' | encode_email }}">{{ 'help@thegymnasium.com' | encode_email }}</a></b>. Sorry, faxes are a little too old school for us.</li>
+    </ul>
+  </section>
+
+</div><!-- .main-content-static -->
+
+<!-- / Temporary HTML for style hooks -->
