--- a/static-pages/privacy-policy/index.html
+++ b/static-pages/privacy-policy/index.html
@@ -1,6 +1,6 @@
 ---
 layout: wrapper-full-white
-permalink: /privacy/
+permalink: /privacy-policy/
 ---
 
 <link rel="stylesheet" href="{{ site.url }}/css/privacy-policy.css">
