Update Jobs page
- Update section heading and fragment, interviewing to interview
- Update about header text, work in progress
- Remove test file

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -9,7 +9,7 @@ permalink: /jobs/
       <div class="container">
         <header>
           <h1>Jobs</h1>
-          <p>Design a career you love with free resources for creative professionals — from in-depth articles to 5-minute tutorials.</p>
+          <p>Design a career you love with free job resources for creative professionals — from onsite and remote <a href="#jobs"><b>opportunities</b></a> to in-depth <a href="#resume-tips"><b>articles</b></a> and 5-minute <a href="#take5-tutorials"><b>tutorials</b></a>.</p>
         </header>
         <div class="cols cols-max-3" id="featured">
           <ul>
@@ -215,11 +215,11 @@ permalink: /jobs/
       </div>
     </section>
 
-    <section class="section" id="interviewing-tips">
+    <section class="section" id="interview-tips">
       <div class="section-content">
         <header>
           <h2 class="all-caps">
-            Interviewing Tips
+            Interview Tips
           </h2>
           <p>
           </p>
