Update Jobs page
- Update metadata
- Update OG artwork
- Update header text
- Update featutred content and layout

--- a/jobs/index.html
+++ b/jobs/index.html
@@ -9,24 +9,24 @@ permalink: /jobs/
       <div class="container">
         <header>
           <h1>Jobs</h1>
-          <p>Design a career you love with free job resources for creative professionals — from onsite and remote <a href="#jobs"><b>opportunities</b></a> to in-depth <a href="#resume-tips"><b>articles</b></a> and 5-minute <a href="#take5-tutorials"><b>tutorials</b></a>.</p>
+          <p>Design a career you love with free resources for creative professionals — from in-depth <a href="#resume-tips"><b>articles</b></a> and 5-minute <a href="#take5-tutorials"><b>tutorials</b></a> to contract and full-time <a href="#jobs"><b>job opportunities</b></a>.</p>
         </header>
         <div class="cols cols-max-3" id="featured">
           <ul>
             <li>
               <article class="card">
                 <div class="card-content featured">
-                  <div class="card-main bg-career-skills equal-h">
+                  <div class="card-main no-subhead equal-h">
                     <header class="full-width">
                       <h2 class="all-caps">Salary Guides</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="2022 Salary Guide" src="{{ site.url }}/img/hub-pages/remote-work/featured/vt-salary-guide-2022.jpg" width="1280" height="720" decoding="async">
                     </figure>
-                    <h3 class="all-caps">See How Your Salary & Benefits Stack Up</h3>
+                    <h3 class="all-caps" hidden>See How Your Salary & Benefits Stack Up</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#salary-benefits"><b>Learn More</b></a>
+                    <a class="gym-button" href="#salary-benefits"><b>Check Salary</b></a>
                   </div>
                 </div>
               </article>
@@ -34,17 +34,17 @@ permalink: /jobs/
             <li>
               <article class="card">
                 <div class="card-content featured">
-                  <div class="card-main bg-career-skills equal-h">
+                  <div class="card-main no-subhead equal-h">
                     <header class="full-width">
-                      <h2 class="all-caps">Find Work</h2>
+                      <h2 class="all-caps">Job Opportunities</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="Find work with Aquent in over 35 offices around the globe." src="{{ site.url }}/img/hub-pages/remote-work/featured/find-work.jpg" width="1280" height="720" decoding="async">
                     </figure>
-                    <h3 class="all-caps">Onsite & Remote Opportunities</h3>
+                    <h3 class="all-caps" hidden>Find Contract and Full-Time Work</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#jobs"><b>Search Jobs</b></a>
+                    <a class="gym-button" href="#jobs"><b>Find Work</b></a>
                   </div>
                 </div>
               </article>
@@ -52,17 +52,17 @@ permalink: /jobs/
             <li>
               <article class="card">
                 <div class="card-content featured">
-                  <div class="card-main bg-career-skills equal-h">
+                  <div class="card-main no-subhead equal-h">
                     <header class="full-width">
                       <h2 class="all-caps">Take 5 Tutorials</h2>
                     </header>
                     <figure class="full-width">
                       <img alt="Tell your story in a compelling way to advance your career and salary." src="{{ site.url }}/img/take5/posters/gym-5016.jpg" width="1280" height="720" decoding="async">
                     </figure>
-                  <h3 class="all-caps">Learn Career Skills in 5 Minutes</h3>
+                  <h3 class="all-caps" hidden>Learn Career Skills in 5 Minutes</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#video-tutorials"><b>Get Started</b></a>
+                    <a class="gym-button" href="#take5-tutorials"><b>Watch Now</b></a>
                   </div>
                 </div>
               </article>
