Update Social Impact page
- Update link, fix redirect

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -44,7 +44,7 @@ permalink: /social-impact/
   <section id="creative-nonprofits">
     <h3>Creative Nonprofits</h3>
     <ul>
-      <li><a href="https://afhboston.org">Artists for Humanity</a></li>
+      <li><a href="https://www.afhboston.org">Artists for Humanity</a></li>
       <li><a href="https://youngarts.org">YoungArts</a></li>
     </ul>
   </section>
