Update Remote Work page
- Add former prefix to job role

--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -131,7 +131,7 @@ permalink: /remote-work/
             </li>
             <li>
               <h3><a href="https://substack.com/profile/2325264-mike-bifulco" target="_blank" rel="noopener">Mike Bifulco’s Substack Articles</a></h3>
-              <p>Thoughtful words and observations by Mike Bifulco, Director of Technology at Aquent Gymnasium.</p>
+              <p>Thoughtful words and observations by Mike Bifulco, former Director of Technology at Aquent Gymnasium.</p>
             </li>
           </ul>
         </div>
