Update Social Impact page
- Update heading/section

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -35,8 +35,8 @@ permalink: /social-impact/
         </ul>
       </section>
 
-      <section id="educational-nonprofits">
-        <h3>Educational Nonprofits</h3>
+      <section id="education-nonprofits">
+        <h3>Education Nonprofits</h3>
         <ul>
           <li><a href="https://www.writeboston.org/tip/">Teens in Print</a></li>
           <li><a href="https://826national.org">826 National</a></li>
