Update hub pages US salary guide content
- Update US salary guide link with UTM
- Update Jobs page salary guide fragment/section

--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -119,7 +119,7 @@ permalink: /remote-work/
             </li>
             <li>
               <h3>
-                <a href="https://brand.vitamintalent.com/salary-guide" target="_blank" rel="noopener">US Salary Guide</a>
+                <a href="https://brand.aquent.com/salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_slg22&utm_content=salary_benefits" target="_blank" rel="noopener">US Salary Guide</a>
               </h3>
               <p>A free downloadable PDF guide to the latest salary benchmarks in the US.</p>
             </li>
