--- a/jobs/index.html
+++ b/jobs/index.html
@@ -26,7 +26,7 @@ permalink: /jobs/
                     <h3 class="all-caps" hidden>See How Your Salary & Benefits Stack Up</h3>
                   </div>
                   <div class="card-cta card-cta-button">
-                    <a class="gym-button" href="#salary-benefits"><b>Check Salary</b></a>
+                    <a class="gym-button" href="#salary-guides"><b>Check Salary</b></a>
                   </div>
                 </div>
               </article>
@@ -90,7 +90,7 @@ permalink: /jobs/
       </div>
     </section>
 
-    <section class="section" id="salary-benefits">
+    <section class="section" id="salary-guides">
       <div class="section-content">
         <header>
           <h2 class="all-caps">
@@ -106,7 +106,7 @@ permalink: /jobs/
             </li>
             <li>
               <h3>
-                <a href="https://brand.vitamintalent.com/salary-guide" target="_blank" rel="noopener">US Salary Guide</a>
+                <a href="https://brand.aquent.com/salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_slg22&utm_content=salary_benefits" target="_blank" rel="noopener">US Salary Guide</a>
               </h3>
             </li>
             <li>
