--- a/hub-pages/remote-work/index.html
+++ b/hub-pages/remote-work/index.html
@@ -125,7 +125,7 @@ permalink: /remote-work/
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/UK-salary-guide" target="_blank" rel="noopener">UK Salary Guide</a>
+                <a href="https://brand.aquent.com/UK-salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_UK_salary-guide&utm_content=2022" target="_blank" rel="noopener">UK Salary Guide</a>
               </h3>
               <p>A free downloadable PDF guide to the latest salary benchmarks in the UK.</p>
             </li>
