--- a/jobs/index.html
+++ b/jobs/index.html
@@ -111,7 +111,7 @@ permalink: /jobs/
             </li>
             <li>
               <h3>
-                <a href="https://brand.aquent.com/UK-salary-guide" target="_blank" rel="noopener">UK Salary Guide</a>
+                <a href="https://brand.aquent.com/UK-salary-guide?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_UK_salary-guide&utm_content=2022" target="_blank" rel="noopener">UK Salary Guide</a>
               </h3>
             </li>
           </ul>
