--- a/courses/full/GYM-100/announcement.html
+++ b/courses/full/GYM-100/announcement.html
@@ -3,3 +3,6 @@ layout: raw
 permalink: /courses/full/gym-100/announcement/
 ---
 <span class="announcement">This course has been retired.</span>
+<div class="announcement">
+  <p><strong>This course is retired.</strong></p>
+</div>
