Update announcement structure
- Add element with Bootstrap class for layout

--- a/courses/full/GYM-100/announcement.html
+++ b/courses/full/GYM-100/announcement.html
@@ -3,5 +3,7 @@ layout: raw
 permalink: /courses/full/gym-100/announcement/
 ---
 <div class="announcement">
-  <p><strong>This course is retired.</strong></p>
+  <div class="container">
+    <p><strong>This course is retired.</strong> Due to outdated content, we no longer offer a credential (a badge) for this course. However, you may access the video lessons as reference for the foreseeable future.</p>
+  </div>
 </div>
