Update announcement language
- Update GYM-100 message
- Update GYM-005/008 message

--- a/courses/full/GYM-100/announcement.html
+++ b/courses/full/GYM-100/announcement.html
@@ -4,6 +4,6 @@ permalink: /courses/full/gym-100/announcement/
 ---
 <div class="announcement">
   <div class="container">
-    <p><strong>This course is retired.</strong></p>
+    <p><strong>This course has been retired.</strong></p>
   </div>
 </div>
