Update retired announcement
- Add message to course data
- Update announcement with data variable

--- a/courses/full/GYM-100/announcement.html
+++ b/courses/full/GYM-100/announcement.html
@@ -4,6 +4,6 @@ permalink: /courses/full/gym-100/announcement/
 ---
 <div class="announcement">
   <div class="container">
-    <p><strong>This course has been retired.</strong></p>
+    <p>{{ site.data.courses.GYM-100.retired_message[2] }}</p>
   </div>
 </div>
