--- a/courses/gym-shorts/GYM-008/announcement.html
+++ b/courses/gym-shorts/GYM-008/announcement.html
@@ -4,6 +4,6 @@ permalink: /courses/gym-shorts/gym-008/announcement/
 ---
 <div class="announcement">
   <div class="container">
-    <p><strong>This course has been retired.</strong> Due to outdated content, we no longer offer a badge for this course. However, you may access the video lessons as reference for the foreseeable future.</p>
+    <p>{{ site.data.courses.GYM-008.retired_message[1] }}</p>
   </div>
 </div>
