Updates privacy policy links

--- a/tests/json/privacy.html
+++ b/tests/json/privacy.html
@@ -1,5 +1,5 @@
 ---
 layout: raw
-permalink: /tests/privacy/
+permalink: /tests/privacy-policy/
 ---
 {{ site.data.privacy-index.contentlets[0].body }}
