Update catalog prototype
- Update format descriptions

--- a/dev/prototypes/courses/version-4/index.html
+++ b/dev/prototypes/courses/version-4/index.html
@@ -156,17 +156,17 @@
           <li>
             <label for="toggle-full-ui" class="label-toggle"><b>Full Course</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-full-ui" checked>
-            <p>Learn new skills and earn a certificate.</p>
+            <p>Learn new skills in a few days.</p>
           </li>
           <li>
             <label for="toggle-short-ui" class="label-toggle"><b>Short Course</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-short-ui" checked>
-            <p>Learn new skills and earn a badge.</p>
+            <p>Learn new skills in a few hours.</p>
           </li>
           <li>
             <label for="toggle-tutorial-ui" class="label-toggle"><b>Tutorial</b></label>
             <input type="checkbox" value="selected" class="input-toggle" id="toggle-tutorial-ui" checked>
-            <p>Learn new skills in 5 minutes or less.</p>
+            <p>Learn new skills in 5 minutes.</p>
           </li>
         </ul>
       </div>
