Update front matter layout
- Update layout; improve local development

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -1,5 +1,5 @@
 ---
-layout: raw
+layout: wrapper-full-default
 permalink: /courses/take5/
 ---
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
