Update navigation heading
- Update language

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -78,7 +78,7 @@ permalink: /courses/take5/
             <nav class="take5--tutorial-topics" aria-labelledby="tutorial-topics">
               <details open class="take5--topics-menu" id="tutorial-topics">
                 <summary aria-expanded="true/false" tabindex="0" role="button">
-                  <b role="heading">Topics</b>
+                  <b role="heading">Category</b>
                 </summary>
                 <div class="take5--topics-menu-list">
                   <!-- Found {{ unique_topics | size }} topic(s) with live content -->
