--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -101,7 +101,7 @@ permalink: /courses/take5/
               <div class="tutorial">
                 <div class="artwork" data-duration="{{ featured_video_duration }}">
                   <a href="{{ featured_url }}" title="Watch Video">
-                    <img alt="{{ featured_description }}" src="{{ site.url }}{{ featured_poster_art }}">
+                    <img alt="{{ featured_description }}" src="{{ site.url }}{{ featured_poster_art }}" width="1280" height="720" decoding="async">
                   </a>
                 </div>
                 <header>
