--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -98,7 +98,7 @@ permalink: /courses/take5/
               <header>
                 <h2>Recent</h2>
               </header>
-              <div class="tutorial">
+              <article class="tutorial">
                 <div class="artwork" data-duration="{{ featured_video_duration }}">
                   <a href="{{ featured_url }}" title="Watch Video">
                     <img alt="{{ featured_description }}" src="{{ site.url }}{{ featured_poster_art }}" width="1280" height="720" decoding="async">
@@ -115,10 +115,10 @@ permalink: /courses/take5/
                 <p class="description">{{ featured_description }}</p>
                 <div class="cta cta-left">
                   <a class="gym-button" href="{{ featured_url }}">
-                    <b>Watch Video</b>
+                    <b>Watch Tutorial</b>
                   </a>
                 </div>
-              </div><!-- .tutorial -->
+              </article><!-- .tutorial -->
             </div><!-- .take5--featured -->
           </div><!-- .col-md-8 -->
         </div><!-- .row -->
