Update card content and layout
- Update call-to-action language
- Add course type
- Add skill level
- Update row height

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -115,9 +115,13 @@ permalink: /courses/take5/
                 <p class="description">{{ featured_description }}</p>
                 <div class="cta cta-left">
                   <a class="gym-button" href="{{ featured_url }}">
-                    <b>Watch Tutorial</b>
+                    <b>Watch Video</b>
                   </a>
                 </div>
+                <footer>
+                  <p><b>{{ item.course_type | replace: 'take5', 'Tutorial' }}</b></p>
+                  <p>{{ item.skill_level }}</p>
+                </footer>
               </article><!-- .tutorial -->
             </div><!-- .take5--featured -->
           </div><!-- .col-md-8 -->
