Update topic subheading
- Update structure and style

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -106,7 +106,7 @@ permalink: /courses/take5/
                   </a>
                 </div>
                 <header>
-                  <h2 class="all-caps subhead-topic">{{ featured_topic }}</h2>
+                  <p class="all-caps subhead-topic" role="doc-subtitle">{{ featured_topic }}</p>
                   <h1 class="title all-caps">
                     <a href="{{ featured_url }}">{{ featured_title }}</a>
                   </h1>
