--- a/courses/index.html
+++ b/courses/index.html
@@ -29,43 +29,46 @@ permalink: /courses/
   </div>
 
   <main id="main" class="container" aria-label="Content" tabindex="-1">
-    <div class="catalog-content row">
-      <div class="col-md-9 course-overview">
-        <section class="courses-container">
+    <div class="white-panel catalog-content">
+      <div class="row">
+        <div class="col-md-9 course-overview">
+          <section class="courses-container">
+  
+            <h1 id="full">Full Courses</h1>
+            <p class="hero">
+              Full Courses are taught by industry experts and focus on current skills and technologies. Each includes 3 to 6 hours of video instruction, optional quizzes and assignments, a final exam, and certificate (if and) when you pass.
+            </p>
+  
+            <ul class="listing-courses">
+              {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
+              {%- include_relative full/course-list-recent.html -%}
+            </ul>
+  
+            <h1 id="gymshorts">Gym Shorts</h1>
+            <p class="hero">
+              Gym Shorts are short courses that all last under an hour. Like our Full Courses, they are taught by industry experts and focus on current skills and technologies. Each includes approximately one hour of video instruction, a final exam, and a badge (if and) when you pass.
+            </p>
+            <ul class="listing-courses" id="gym-shorts-list">
+              {%- assign base_path = "/courses/gym-shorts/" | prepend: site.gymurl -%}
+              {%- include_relative gym-shorts/course-list-recent.html -%}
+            </ul>
+  
+            {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
+  
+            <h1 id="take5">Take 5</h1>
+            {%- include take5/course-catalog-description.html -%}
+  
+            <ul class="listing-courses" id="take5-list">
+            {%- include_relative take5/course-list-recent.html -%}
+            </ul>
+          </section>
+        </div>
+        <div class="col-md-3 sidebar">
+          {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
+          {%- include sidebar-featured.html -%}
+        </div>
+      </div><!-- .catalog-content.row -->
+    </div><!-- .white-panel -->
 
-          <h1 id="full">Full Courses</h1>
-          <p class="hero">
-            Full Courses are taught by industry experts and focus on current skills and technologies. Each includes 3 to 6 hours of video instruction, optional quizzes and assignments, a final exam, and certificate (if and) when you pass.
-          </p>
-
-          <ul class="listing-courses">
-            {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
-            {%- include_relative full/course-list-recent.html -%}
-          </ul>
-
-          <h1 id="gymshorts">Gym Shorts</h1>
-          <p class="hero">
-            Gym Shorts are short courses that all last under an hour. Like our Full Courses, they are taught by industry experts and focus on current skills and technologies. Each includes approximately one hour of video instruction, a final exam, and a badge (if and) when you pass.
-          </p>
-          <ul class="listing-courses" id="gym-shorts-list">
-            {%- assign base_path = "/courses/gym-shorts/" | prepend: site.gymurl -%}
-            {%- include_relative gym-shorts/course-list-recent.html -%}
-          </ul>
-
-          {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
-
-          <h1 id="take5">Take 5</h1>
-          {%- include take5/course-catalog-description.html -%}
-
-          <ul class="listing-courses" id="take5-list">
-          {%- include_relative take5/course-list-recent.html -%}
-          </ul>
-        </section>
-      </div>
-      <div class="col-md-3 sidebar">
-        {%- comment -%} Get Upcoming/Featured Courses Sidebar {%- endcomment -%}
-        {%- include sidebar-featured.html -%}
-      </div>
-    </div>
   </main>
 </section>
