--- a/courses/index.html
+++ b/courses/index.html
@@ -33,12 +33,13 @@ permalink: /courses/
       <div class="row">
         <div class="col-md-9 course-overview">
           <section class="courses-container">
-  
-            <h1 id="full">Full Courses</h1>
-            <p class="hero">
-              Full Courses are taught by industry experts and focus on current skills and technologies. Each includes 3 to 6 hours of video instruction, optional quizzes and assignments, a final exam, and certificate (if and) when you pass.
-            </p>
-  
+            <header>
+              <h1 id="full">Full Courses</h1>
+              <p class="hero">
+                Full Courses are taught by industry experts and focus on current skills and technologies. Each includes 3 to 6 hours of video instruction, optional quizzes and assignments, a final exam, and certificate (if and) when you pass.
+              </p>
+            </header>
+
             <ul class="listing-courses">
               {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
               {%- include_relative full/course-list-recent.html -%}
