Update Take 5 landing page
- Add style sheet preload

--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -4,6 +4,7 @@ permalink: /courses/take5/
 ---
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
 
+<preload rel="stylesheet" as="style" href="{{ site.url }}/css/take5.css">
 <link rel="stylesheet" href="{{ site.url }}/css/take5.css">
 
 {%- include take5/detail-opener-js.html -%}
