--- a/courses/index.html
+++ b/courses/index.html
@@ -40,7 +40,7 @@ permalink: /courses/
               </p>
             </header>
 
-            <ul class="listing-courses">
+            <ul class="listing-courses list-unstyled">
               {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
               {%- include_relative full/course-list-recent.html -%}
             </ul>
