--- a/courses/index.html
+++ b/courses/index.html
@@ -52,7 +52,7 @@ permalink: /courses/
               </p>
             </header>
 
-            <ul class="listing-courses" id="gym-shorts-list">
+            <ul class="listing-courses list-unstyled" id="gym-shorts-list">
               {%- assign base_path = "/courses/gym-shorts/" | prepend: site.gymurl -%}
               {%- include_relative gym-shorts/course-list-recent.html -%}
             </ul>
@@ -64,7 +64,7 @@ permalink: /courses/
               {%- include take5/course-catalog-description.html -%}
             </header>
 
-            <ul class="listing-courses" id="take5-list">
+            <ul class="listing-courses list-unstyled" id="take5-list">
             {%- include_relative take5/course-list-recent.html -%}
             </ul>
           </section>
