Update hero tests
- Update naming, coding to stream
- Add live stream hero source

--- a/tests/hero/hero-test-live-stream.html
+++ b/tests/hero/hero-test-live-stream.html
@@ -1,13 +1,10 @@
 ---
 layout: test-home-minimal
-permalink: /tests/hero-live-coding
+permalink: /tests/hero-live-stream
 ---
 
-{%- include /heros/hero-livecoding.html -%}
-
+{%- include /heros/hero-live-stream.html -%}
 
 <div style="margin-top: 80px">
 <!-- Does nothing but add space -->
 </div>
-
-
