--- a/tests/hero/hero-test-index.html
+++ b/tests/hero/hero-test-index.html
@@ -9,17 +9,16 @@ permalink: /tests/hero
 
 <p><a href="/tests/hero-public">current_promo</a>: <code>{{ hero.current_promo }}</code></p>
 
-   
+
 
 <h2>Authenticated Hero</h2>
 
 <p><a href="/tests/hero-auth">auth_promo</a>: <code>{{ hero.auth_promo | prepend: "/heros/"}}</code></p>
 
- 
-
-<h2>Live Coding Hero</h2>
 
 
-<p><a href="/tests/hero-live-coding">live_coding</a>: <code>{{ hero.live_coding | prepend: "/heros/" }}</code></p>
+<h2>Live Stream Hero</h2>
 
+<p><a href="/tests/hero-live-stream">live_stream</a>: <code>{{ hero.live_stream }}</code></p>
 
+<p><b>Source:</b> <code>{{ hero.source }}</code></p>
