--- a/tests/hero/hero-test-index.html
+++ b/tests/hero/hero-test-index.html
@@ -7,13 +7,13 @@ permalink: /tests/hero
 
 <h2>Public Hero</h2>
 
-<p><a href="/tests/hero-public">current_promo</a>: <code>{{ hero.current_promo }}</code></p>
+<p><a href="/tests/hero-public">current_promo</a>: <code>{{ hero.current_promo | prepend: "/heros/" }}</code></p>
 
 
 
 <h2>Authenticated Hero</h2>
 
-<p><a href="/tests/hero-auth">auth_promo</a>: <code>{{ hero.auth_promo | prepend: "/heros/"}}</code></p>
+<p><a href="/tests/hero-auth">auth_promo</a>: <code>{{ hero.auth_promo | prepend: "/heros/" }}</code></p>
 
 
 
@@ -29,6 +29,11 @@ permalink: /tests/hero
     if hero.embed_source != "twitch"
     and hero.embed_source != "youtube"
     or hero.embed_source == undefined
+    or hero.embed_source == ""
+    or hero.twitch_channel == undefined
+    or hero.twitch_channel == ""
+    or hero.youtube_video_ID == undefined
+    or hero.youtube_video_ID == ""
   %}
     <mark>error</mark>
   {% endif %}
