--- a/webinars/index.html
+++ b/webinars/index.html
@@ -88,9 +88,9 @@ layout: raw
               </ul>
               {% else %}
               {%- if headcount == "1" -%}
-              <p class="guest-speakers">With <strong>{{ site.data.bios[speaker_1].name }}</strong></p>
+              <p class="guest-speakers">with <strong>{{ site.data.bios[speaker_1].name }}</strong></p>
               {%- else -%}
-              <p class="guest-speakers">With <strong>{{ site.data.bios[speaker_1].name }}</strong> and <strong>{{ site.data.bios[speaker_2].name }}</strong></p>
+              <p class="guest-speakers">with <strong>{{ site.data.bios[speaker_1].name }}</strong> and <strong>{{ site.data.bios[speaker_2].name }}</strong></p>
               {%- endif -%}
               {%- endif -%}
             </div>
@@ -101,7 +101,7 @@ layout: raw
               <b>Register to Attend</b>
             </a>
             {% elsif item.video %}
-            <a class="gym-button gym-button-secondary" href="{{ webinar_url }}">
+            <a class="gym-button" href="{{ webinar_url }}">
               <b>Watch Recording</b>
             </a>
             {% else %}
