Update collections landing page
- Update CTA styling

--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -28,7 +28,7 @@ permalink: /collections/
               </header>
             </div>
             <div class="collection--cta">
-              <a class="gym-button gym-button-secondary" href="{{ hub_page.url }}">
+              <a class="gym-button" href="{{ hub_page.url }}">
                 <b>Learn More</b>
               </a>
             </div>
