--- a/courses/index.html
+++ b/courses/index.html
@@ -7,7 +7,6 @@ permalink: /courses/
 {%- endif -%}
 
 <!-- TODO: maybe create a new CSS file for the entire course catalog page? -->
-<link rel="stylesheet" href="{{ site.url }}/css/take5-course-catalog.css?{{ site.time | date:'%s' }}">
 <section class="find-courses" id="gym-catalog">
 
   <header class="course-title">
@@ -30,15 +29,15 @@ permalink: /courses/
     </ul>
   </div>
 
-  <main id="main" class="container" aria-label="Content" tabindex="-1">
+  <main id="main" class="container" aria-label="Content" tabindex="-1" role="main">
     <div class="white-panel catalog-content">
       <div class="row">
         <div class="col-md-9 course-overview">
           <section class="courses-container">
-            <header class="intro">
-              <h1 id="full">Full Courses</h1>
+            <header class="intro" id="full">
+              <h1>Full Courses</h1>
               <p class="hero">
-                Full Courses are taught by industry experts and focus on current skills and technologies. Each includes 3 to 6 hours of video instruction, optional quizzes and assignments, a final exam, and certificate (if and) when you pass.
+                <b>Learn new skills in a few days.</b> Full Courses are free, self-paced video-instructed courses with a forum to share work and get feedback, plus optional homework, quizzes, and exam to test your skills and earn a certificate.
               </p>
             </header>
 
@@ -46,11 +45,14 @@ permalink: /courses/
               {%- assign base_path = "/courses/full/" | prepend: site.gymurl -%}
               {%- include_relative full/course-list-recent.html -%}
             </ul>
-  
-            <header class="intro">
-              <h1 id="gymshorts">Gym Shorts</h1>
+            <div class="to-top-link">
+              <a href="#gym-catalog"><b>Back to top</b></a>
+            </div>
+
+            <header class="intro" id="gymshorts">
+              <h1>Gym Shorts</h1>
               <p class="hero">
-                Gym Shorts are short courses that all last under an hour. Like our Full Courses, they are taught by industry experts and focus on current skills and technologies. Each includes approximately one hour of video instruction, a final exam, and a badge (if and) when you pass.
+                <b>Learn new skills in a few hours.</b> Gym Shorts are free, self-paced video-instructed short courses with an optional exam to test your skills and earn a badge.
               </p>
             </header>
 
@@ -58,17 +60,31 @@ permalink: /courses/
               {%- assign base_path = "/courses/gym-shorts/" | prepend: site.gymurl -%}
               {%- include_relative gym-shorts/course-list-recent.html -%}
             </ul>
+            <div class="to-top-link">
+              <a href="#gym-catalog"><b>Back to top</b></a>
+            </div>
 
             {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
 
-            <header class="intro">
-              <h1 id="take5">Take 5</h1>
-              {%- include take5/course-catalog-description.html -%}
+            <header class="intro" id="take5">
+              <h1>Take 5</h1>
+              <p class="hero">
+                <b>Learn new skills in 5 minutes.</b> Take 5 tutorials are free video tutorials with no homework or exam. Microlearning made for everyone.
+              </p>
             </header>
 
             <ul class="listing-courses list-unstyled" id="take5-list">
             {%- include_relative take5/course-list-recent.html -%}
             </ul>
+
+            <div class="cta">
+              <a class="gym-button" href="{{ site.gymurl}}/courses/take5/">
+                <b>View All Take 5 Tutorials</b>
+              </a>
+            </div>
+            <div class="to-top-link">
+              <a href="#gym-catalog"><b>Back to top</b></a>
+            </div>
           </section>
         </div>
         <div class="col-md-3 sidebar">
