--- a/courses/take5/course-list-recent.html
+++ b/courses/take5/course-list-recent.html
@@ -37,7 +37,7 @@ permalink: /courses/take5/course-list-recent
 
 {%- assign recent = recent | reverse -%}
 
-{%- for item in recent -%}
+{%- for item in recent limit: 5 -%}
   {%- assign course = site.data.take5[item] -%}
 
   <li class="course-item" data-course-id="{{ course.course_ID | remove: 'GYM-' }}">
